--- a/views/registerClient.ejs
+++ b/views/registerClient.ejs
@@ -5,7 +5,7 @@
           <i class="fas fa-user-plus"></i> Register
         </h1>
        <%- include ("./partials/messages.ejs") %>
-        <form action="/user/register" method="POST">
+        <form action="/user/registerClient" method="POST">
           <div class="form-group">
             <label for="name">Name</label>
             <input
