--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -23,7 +23,7 @@
   <div class="col-md-6 m-auto">
     <div class="card card-body text-center">
       <p>Create an account or login</p>
-      <a href="/user/register" class="btn btn-primary btn-block mb-2">Register</a>
+      <a href="/user/registerWC" class="btn btn-primary btn-block mb-2">Register</a>
       <a href="/user/login" class="btn btn-secondary btn-block">Login</a>
     </div>
   </div>
