--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,13 +5,13 @@
         <%- include ("./partials/messages.ejs") %>
         <form action="/user/login" method="POST">
           <div class="form-group">
-            <label for="email">Email</label>
+            <label for="name">Name</label>
             <input
-              type="email"
-              id="email"
-              name="email"
+              type="name"
+              id="name"
+              name="name"
               class="form-control"
-              placeholder="Enter Email"
+              placeholder="Enter Username"
             />
           </div>
           <div class="form-group">
