--- a/views/client.ejs
+++ b/views/client.ejs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand bg-dark navbar-dark py-3 fixed-top">
   <div class="container">
-    <a href="#" class="navbar-brand">Work<span class="text-danger fw-bold">Connect</span></a>
+    <a href="/client" class="navbar-brand">Work<span class="text-danger fw-bold">Connect</span></a>
     <ul class="navbar-nav ms-auto align-center">
       <li class="nav-item mx-3" style="display: flex; align-items: center; font-size: 1.5rem;">
         <a href="/client" class="nav-link active">New Issues</a>
@@ -31,6 +31,7 @@
           <option value="1">carpentary</option>
           <option value="2">electrician</option>
           <option value="3">cleaning</option>
+          <option value="3">plumbing</option>
         </select>
         <div class="form-floating" style="margin: 20px 0;">
           <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea"
