--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3 fixed-top">
   <div class="container">
-    <a href="#" class="navbar-brand">Work<span class="text-danger fw-bold">Connect</span></a>
+    <a href="/" class="navbar-brand">Work<span class="text-danger fw-bold">Connect</span></a>
     <a href="/user/login" class="btn btn-info btn-block">Login</a>
   </div>
 </nav>
