fixed image in client, client, worker

--- a/views/client.ejs
+++ b/views/client.ejs
@@ -42,7 +42,7 @@
     </div>
     <div
       class="d-flex flex-column flex-lg-row justify-content-center justify-content-lg-between align-items-center mx-auto client-home-image">
-      <img class="img-fluid" src="images/ideas.png" alt="" style="max-height: 90vh;">
+      <img class="img-fluid" src="images/ideas.png" >
     </div>
   </div>
 </section>
