fixed image in client

--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -62,7 +62,7 @@
   <div class="container">
     <div class="row align-items-center justify-content-between">
       <div class="col-md p-5">
-        <h2>Benefits</h2>
+        <h2 style="color:white">Benefits</h2>
         <p class="lead">Convenient: Work-Connect is accessible from anywhere with an internet connection.
         </p>
         <p class="lead">Ease of Use: Our user-friendly interface makes it simple to post requests and find workers.
