fixed clients image and changed /user to /

--- a/views/worker.ejs
+++ b/views/worker.ejs
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3 fixed-top">
     <div class="container">
       <a href="#" class="navbar-brand">Work<span class="text-danger fw-bold">Connect</span></a>
-      <a href="/user/login" class="btn btn-info btn-block">Login</a>
+      <a href="/login" class="btn btn-info btn-block">Login</a>
     </div>
   </nav>
   <section class="bg-dark text-white p- p-lg-0 pt-lg-5 text-center text-sm-start">
@@ -82,8 +82,8 @@
     <div class="p-4 p-sm-5 bg-dark text-light rounded-3 welcome-started">
       <h4 class="text-center">Whether you're a daily-wage worker looking for clients or a client in need of workers, Work-Connect is the solution for you. Sign up now to start connecting.</h4>
       <div class="d-flex justify-content-around flex-column flex-sm-row align-center">
-        <a href="/user/registerClient" class="btn btn-primary btn-block mt-2">Register as client</a>
-          <a href="/user/registerWorker" class="btn btn-primary btn-block mt-2">Register as worker</a>
+        <a href="/registerClient" class="btn btn-primary btn-block mt-2">Register as client</a>
+          <a href="/registerWorker" class="btn btn-primary btn-block mt-2">Register as worker</a>
       </div>
     </div>
   </section>
