--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,5 +1,5 @@
 <h1 class="mt-4">Dashboard</h1>
-<a href="/user/logout" class="btn btn-secondary">logout</a>
+<a href="/logout" class="btn btn-secondary">logout</a>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <header class="bg-primary text-center py-5 mb-4">
         <div class="container">
