--- a/views/registerClient.ejs
+++ b/views/registerClient.ejs
@@ -5,7 +5,7 @@
           <i class="fas fa-user-plus"></i> Register
         </h1>
        <%- include ("./partials/messages.ejs") %>
-        <form action="/user/registerClient" method="POST">
+        <form action="/registerClient" method="POST">
           <div class="form-group">
             <label for="name">Name</label>
             <input
@@ -76,7 +76,7 @@
             Register
           </button>
         </form>
-        <p class="lead mt-4">Have An Account? <a href="/user/login">Login</a></p>
+        <p class="lead mt-4">Have An Account? <a href="/login">Login</a></p>
       </div>
     </div>
   </div>
