--- a/views/registerWorker.ejs
+++ b/views/registerWorker.ejs
@@ -5,7 +5,7 @@
           <i class="fas fa-user-plus"></i> Register
         </h1>
        <%- include ("./partials/messages.ejs") %>
-        <form action="/user/registerWorker" method="POST">
+        <form action="/registerWorker" method="POST">
           <div class="form-group">
             <label for="name">Name</label>
             <input
@@ -98,7 +98,7 @@
             Register
           </button>
         </form>
-        <p class="lead mt-4">Have An Account? <a href="/user/login">Login</a></p>
+        <p class="lead mt-4">Have An Account? <a href="/login">Login</a></p>
       </div>
     </div>
   </div>
