--- a/views/all_works.ejs
+++ b/views/all_works.ejs
@@ -222,5 +222,13 @@
 
         
     </section>
+    <footer class="p-3 bg-dark text-white text-center position-relative">
+        <div class="container">
+          <p class="lead">Copyright &copy; 2023 Work-Connect</p>
+          <a href="#" class="position-absolute bottom-0 end-0 p-3">
+            <i class="bi bi-arrow-up-circle h1"></i>
+          </a>
+        </div>
+      </footer>
 <!-- </body>
 </html> -->
