changed userprofile to clientuserprofile in client

--- a/views/pastIssues.ejs
+++ b/views/pastIssues.ejs
@@ -9,11 +9,11 @@
                 <a href="/client/pastIssues" class="nav-link active">Old Issues</a>
             </li>
             <li class="nav-item mx-3" style="display: flex; align-items: center;">
-                <a class="nav-link" href="/client/userprofile"><i class="bi bi-bell-fill"
+                <a class="nav-link" href="/client/clientuserprofile"><i class="bi bi-bell-fill"
                         style="font-size:30px;"></i></a>
             </li>
             <li class="nav-item mx-3" style="display: flex; align-items: center;">
-                <a class="nav-link" href="/client/userprofile"><i class="bi bi-person-circle"
+                <a class="nav-link" href="/client/clientuserprofile"><i class="bi bi-person-circle"
                         style="font-size:30px;"></i></a>
             </li>
         </ul>
