--- a/views/clientuserprofile.ejs
+++ b/views/clientuserprofile.ejs
@@ -20,3 +20,42 @@
     </div>
 </nav>
 
+<section class="p-5 mt-5">
+    <div class="container">
+        <form style="width:450px; margin:auto" class="pt-4 pe-5 ps-5 rounded-3">
+            <div class="form-floating mb-4">
+                <input  placeholder="Name" type="text" id="form6Example1" class="form-control" />
+                <label class="Username" for="form6Example1">Name</label>
+            </div>
+            
+            <div class="form-floating mb-4">
+                <input  placeholder="Udername" type="text" id="form6Example2" class="form-control" />
+                <label class="form-label" for="form6Example2">Username</label>
+            </div>
+            
+
+            <!-- Email input -->
+            <div class="form-floating mb-4">
+                <input  placeholder="E-mail" type="email" id="form6Example5" class="form-control" />
+                <label class="form-label" for="form6Example5">Email</label>
+            </div>
+
+            <!-- Number input -->
+            <div class="form-floating mb-4">
+                <input  placeholder="Phone Number" type="number"  placeholder="Leave a comment here" id="form6Example6" class="form-control" />
+                <label class="form-label" for="form6Example6">Phone</label>
+            </div>
+
+            <!-- Message input -->
+            <div class="form-floating">
+                <textarea class="form-control"  placeholder="Leave a comment here" id="form6Example7" style="height: 125px"></textarea>
+                <label for="form6Example7">Address</label>
+            </div>
+
+            <!-- Submit button -->
+            <div class="d-grid gap-2">
+                <button type="submit" class="btn btn-success btn-block mb-4 mt-4">Submit Change</button>
+              </div>
+        </form>
+    </div>
+</section>
