added table to my applications section of workers

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="/stylesheet/style.css">
     <link rel="stylesheet" href="/stylesheet/worker_style.css">
     <link rel="stylesheet" href="/stylesheet/my_applications.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.css"> 
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.13.2/css/dataTables.bootstrap4.min.css">   
+    
     <title>Fullstack login</title>
   </head>
   <body>
