--- a/public/stylesheet/my_applications.css
+++ b/public/stylesheet/my_applications.css
@@ -31,7 +31,8 @@ p{
     margin: 15px 0 20px 0;
 }
 
-.fearured{
+.heading {
     text-align: center;
     margin-top: 74px;
+    margin-bottom: 40px;
 }
