--- a/views/worker_index.ejs
+++ b/views/worker_index.ejs
@@ -30,11 +30,11 @@
                 <a href="/worker_applications" class="nav-link">My Applications</a>
               </li>
             <li class="nav-item mx-3" style="display: flex; align-items: center;">
-              <a class="nav-link" href="/client/userprofile"><i class="bi bi-bell-fill" style="font-size:30px;"></i></a>
+              <a class="nav-link" href="/userprofile"><i class="bi bi-bell-fill" style="font-size:30px;"></i></a>
             </li>
             
             <li class="nav-item mx-3" style="display: flex; align-items: center;">
-              <a class="nav-link" href="/client/userprofile"><i class="bi bi-person-circle" style="font-size:30px;"></i></a>
+              <a class="nav-link" href="/userprofile"><i class="bi bi-person-circle" style="font-size:30px;"></i></a>
             </li>
           </ul>
         </div>
