--- a/views/client.ejs
+++ b/views/client.ejs
@@ -8,11 +8,16 @@
       <li class="nav-item mx-3" style="display: flex; align-items: center; font-size: 1.5rem;">
         <a href="/client/pastIssues" class="nav-link">Old Issues</a>
       </li>
+      <!-- <li class="nav-item mx-3" style="display: flex; align-items: center;">
+                <a class="nav-link" href="/client/clientuserprofile"><i class="bi bi-bell-fill"
+                        style="font-size:30px;"></i></a>
+            </li> -->
       <li class="nav-item mx-3" style="display: flex; align-items: center;">
-        <a class="nav-link" href="/client/clientuserprofile"><i class="bi bi-bell-fill" style="font-size:30px;"></i></a>
+        <a class="nav-link" href="/client/clientuserprofile"><i class="bi bi-person-circle"
+            style="font-size:30px;"></i></a>
       </li>
       <li class="nav-item mx-3" style="display: flex; align-items: center;">
-        <a class="nav-link" href="/client/clientuserprofile"><i class="bi bi-person-circle" style="font-size:30px;"></i></a>
+        <a class="nav-link active" href="/"><i class="bi bi-power" style="font-size:30px; color:red"></i></a>
       </li>
     </ul>
   </div>
@@ -42,7 +47,7 @@
     </div>
     <div
       class="d-flex flex-column flex-lg-row justify-content-center justify-content-lg-between align-items-center mx-auto client-home-image">
-      <img class="img-fluid" src="images/ideas.png" >
+      <img class="img-fluid" src="images/ideas.png">
     </div>
   </div>
 </section>
