--- a/views/worker_index.ejs
+++ b/views/worker_index.ejs
@@ -29,12 +29,16 @@
             <li class="nav-item mx-3" style="display: flex; align-items: center; font-size: 1.5rem;">
                 <a href="/worker_applications" class="nav-link">My Applications</a>
               </li>
+            <!-- <li class="nav-item mx-3" style="display: flex; align-items: center;">
+                <a class="nav-link" href="/client/clientuserprofile"><i class="bi bi-bell-fill"
+                        style="font-size:30px;"></i></a>
+            </li> -->
             <li class="nav-item mx-3" style="display: flex; align-items: center;">
-              <a class="nav-link" href="/userprofile"><i class="bi bi-bell-fill" style="font-size:30px;"></i></a>
+                <a class="nav-link" href="/userprofile"><i class="bi bi-person-circle"
+                        style="font-size:30px;"></i></a>
             </li>
-            
             <li class="nav-item mx-3" style="display: flex; align-items: center;">
-              <a class="nav-link" href="/userprofile"><i class="bi bi-person-circle" style="font-size:30px;"></i></a>
+                <a class="nav-link" href="/"><i class="bi bi-power"style="font-size:30px; color:red"></i></a>
             </li>
           </ul>
         </div>
