added name,post and method to all form

--- a/views/client.ejs
+++ b/views/client.ejs
@@ -30,7 +30,7 @@
         <h1>Have any Issues?</h1>
         <h2 style="margin-bottom: 35px;">We're Here To Help</h2>
       </div>
-      <form style="width: 100%; display: flex; flex-direction: column; justify-content: space-between;">
+      <form style="width: 100%; display: flex; flex-direction: column; justify-content: space-between;"  method="POST" action="/addnewissues">
         <select class="form-select" aria-label="Default select example">
           <option selected>Open this select categories</option>
           <option value="1">carpentary</option>
