editclient,registration_client,postWork done

--- a/views/client.ejs
+++ b/views/client.ejs
@@ -31,7 +31,7 @@
         <h2 style="margin-bottom: 35px;">We're Here To Help</h2>
       </div>
       <form action="/client" method="POST" style="width: 100%; display: flex; flex-direction: column; justify-content: space-between;">
-        <select type="select" id="select" value="select"  class="form-select" aria-label="Default select example">
+        <select name="option" type="select" id="select" value="select"  class="form-select" aria-label="Default select example">
           <option selected>Open this select categories</option>
           <option value="1">carpentary</option>
           <option value="2">electrician</option>
