--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,11 +5,11 @@
         <%- include ("./partials/messages.ejs") %>
         <form action="/login" method="POST">
           <div class="form-group">
-            <label for="name">Name</label>
+            <label for="username">Username</label>
             <input
-              type="name"
-              id="name"
-              name="name"
+              type="username"
+              id="username"
+              name="username"
               class="form-control"
               placeholder="Enter Username"
             />
