--- a/views/registerClient.ejs
+++ b/views/registerClient.ejs
@@ -18,36 +18,47 @@
             />
           </div>
           <div class="form-group">
-            <label for="contact">Contact</label>
+            <label for="username">Username</label>
             <input
-              type="contact"
-              id="contact"
-              name="contact"
+              type="username"
+              id="username"
+              name="username"
+              class="form-control"
+              placeholder="Enter username"
+              value="<%= typeof username != 'undefined' ? username : '' %>"
+            />
+          </div>
+          <div class="form-group">
+            <label for="contact_no">Contact</label>
+            <input
+              type="contact_no"
+              id="contact_no"
+              name="contact_no"
               class="form-control"
               placeholder="Enter Contact"
-              value="<%= typeof contact != 'undefined' ? contact : '' %>"
+              value="<%= typeof contact_no != 'undefined' ? contact_no : '' %>"
             />
           </div>
           <div class="form-group">
-            <label for="longitude">Enter locations details</label>
+            <label for="location">Enter locations details</label>
             <input
-              type="longitude"
-              id="longitude"
-              name="longitude"
+              type="location"
+              id="location"
+              name="location"
               class="form-control"
-              placeholder="Enter longitude"
-              value="<%= typeof longitude != 'undefined' ? longitude : '' %>"
+              placeholder="Enter location"
+              value="<%= typeof location != 'undefined' ? location : '' %>"
             />
           </div>
           <div class="form-group">
-            <!-- <label for="latitude"></label> -->
+            <label for="email">Enter email</label>
             <input
-              type="latitude"
-              id="latitude"
-              name="latitude"
+              type="email"
+              id="email"
+              name="email"
               class="form-control"
-              placeholder="Enter latitude"
-              value="<%= typeof latitude != 'undefined' ? latitude : '' %>"
+              placeholder="Enter email"
+              value="<%= typeof email != 'undefined' ? email : '' %>"
             />
           </div>
           <div class="form-group">
