--- a/views/clientuserprofile.ejs
+++ b/views/clientuserprofile.ejs
@@ -25,14 +25,14 @@
 
 <section class="p-5 mt-5">
     <div class="container">
-        <form style="width:450px; margin:auto" class="pt-4 pe-5 ps-5 rounded-3" method="POST" action="/editclientprofile">
+        <form style="width:450px; margin:auto" class="pt-4 pe-5 ps-5 rounded-3" method="POST" action="/editclientuserprofile">
             <div class="form-floating mb-4">
                 <input  placeholder="Name" name="name" type="text" id="form6Example1" class="form-control" />
                 <label class="Username" for="form6Example1">Name</label>
             </div>
             
             <div class="form-floating mb-4">
-                <input name="Username"  placeholder="Username" type="text" id="form6Example2" class="form-control" />
+                <input name="username"  placeholder="Username" type="text" id="form6Example2" class="form-control" />
                 <label class="form-label" for="form6Example2">Username</label>
             </div>
             
