added submit form and admin

--- a/views/worker_index.ejs
+++ b/views/worker_index.ejs
@@ -43,8 +43,10 @@
         <h2> 
             Recommended For You
         </h2>
-        <div class="work-container" >
-            <div class="work">
+        <!-- id="blur" -->
+        <div class="work-container">
+            <!-- onclick="toggle() -->
+            <div class="work" >
                 <img src="/images/temp1.jpg" alt="xyz work" class="workimg">
                 <div class="description">
                     <h4>
@@ -101,8 +103,8 @@
                         Rs. 500/-
                     </h4>
                 </div>
-                <a href="#">
-                    <button type="submit" class="apply_btn">
+                <a href="/worker_submit_form">
+                    <button type="submit" class="apply_btn" >
                         Apply Now
                     </button>
                 </a>
@@ -220,6 +222,13 @@
             </div>
         </div>
 
+        <!-- <script type="text/javascript">
+            function toggle(){
+                var blur= document.getElementById(blur);
+                blur.classList.toggle('active');
+            }
+
+        </script> -->
         
     </section>
     <footer class="p-3 bg-dark text-white text-center position-relative">
