--- a/views/client_negotiation.ejs
+++ b/views/client_negotiation.ejs
@@ -1,32 +1,22 @@
 <nav class="navbar navbar-expand bg-dark navbar-dark py-3 fixed-top">
     <div class="container">
-        <a href="#" class="navbar-brand">Work<span class="text-danger fw-bold">Connect</span></a>
-        <!-- <a href="/user/login" class="btn btn-info btn-block">Login</a> -->
-        <!-- <i class="bi bi-bell-fill" style="color: white;"></i>
-        <a href="/client/userprofile"><i class="bi bi-person-circle h2" style="color: white;"></i></a> -->
-        <ul class="navbar-nav ms-auto align-center">
-            <li class="nav-item mx-3" style="display: flex; align-items: center; font-size: 1.5rem;">
-                <a href="/worker" class="nav-link active">Recommended</a>
-
-            </li>
-            <li class="nav-item mx-3" style="display: flex; align-items: center; font-size: 1.5rem;">
-                <a href="/worker_all" class="nav-link">All works</a>
-            </li>
-            <li class="nav-item mx-3" style="display: flex; align-items: center; font-size: 1.5rem;">
-                <a href="/worker_applications" class="nav-link">My Applications</a>
-            </li>
-            <li class="nav-item mx-3" style="display: flex; align-items: center;">
-                <a class="nav-link" href="/client/userprofile"><i class="bi bi-bell-fill"
-                        style="font-size:30px;"></i></a>
-            </li>
-
-            <li class="nav-item mx-3" style="display: flex; align-items: center;">
-                <a class="nav-link" href="/client/userprofile"><i class="bi bi-person-circle"
-                        style="font-size:30px;"></i></a>
-            </li>
-        </ul>
+      <a href="/client" class="navbar-brand">Work<span class="text-danger fw-bold">Connect</span></a>
+      <ul class="navbar-nav ms-auto align-center">
+        <li class="nav-item mx-3" style="display: flex; align-items: center; font-size: 1.5rem;">
+          <a href="/client" class="nav-link active">New Issues</a>
+        </li>
+        <li class="nav-item mx-3" style="display: flex; align-items: center; font-size: 1.5rem;">
+          <a href="/client/pastIssues" class="nav-link">Old Issues</a>
+        </li>
+        <li class="nav-item mx-3" style="display: flex; align-items: center;">
+          <a class="nav-link" href="/client/userprofile"><i class="bi bi-bell-fill" style="font-size:30px;"></i></a>
+        </li>
+        <li class="nav-item mx-3" style="display: flex; align-items: center;">
+          <a class="nav-link" href="/client/userprofile"><i class="bi bi-person-circle" style="font-size:30px;"></i></a>
+        </li>
+      </ul>
     </div>
-</nav>
+  </nav>
 
 <section id="box" class="bg-dark">
     <section id="form">
@@ -53,8 +43,8 @@
                 </p>
             </label>
         </div>
-        <form method="post" action="/apply">
-            <button type="button" class="btn btn-primary temp">Apply</button>
+        <form method="post" action="/reject">
+            <button type="button" class="btn btn-primary temp">Reject</button>
         </form>
         <div class="divider d-flex align-items-center my-4">
             <p class="text-center fw-bold mx-3 mb-0 text-muted">OR</p>
@@ -63,7 +53,7 @@
             <label>
                 Counter Pay:-
             </label>
-            <form method="post" action="/negotitation">
+            <form method="post" action="/client_negotitation">
                 <input type="text" required>
 
                 <button type="button" class="btn btn-primary temp">Submit</button>
