--- a/views/submit_form.ejs
+++ b/views/submit_form.ejs
@@ -49,7 +49,7 @@
             <label>
                 Pay:-
                 <p>
-                    Rs.500/-
+                    <input type="number" method="post" name='amount'>
                 </p>
             </label>
         </div>
@@ -63,10 +63,10 @@
             <label>
                 Counter Pay:-
             </label>
-            <form method="post" action="/negotitation">
+            <form method="post" action="/worker_negotitation">
                 <input type="text" required>
 
-                <button type="button" class="btn btn-primary temp">Submit</button>
+                <button type="button" id="temp2 " class="btn btn-primary temp">Submit</button>
 
             </form>
         </div>
