--- a/views/client_negotiation.ejs
+++ b/views/client_negotiation.ejs
@@ -43,6 +43,9 @@
                 </p>
             </label>
         </div>
+        <form method="post" action="/accept">
+            <button type="button" class="btn btn-primary temp">Accept</button>
+        </form>
         <form method="post" action="/reject">
             <button type="button" class="btn btn-primary temp">Reject</button>
         </form>
@@ -56,7 +59,7 @@
             <form method="post" action="/client_negotitation">
                 <input type="text" required>
 
-                <button type="button" class="btn btn-primary temp">Submit</button>
+                <button type="button" id="temp2 " class="btn btn-primary temp">Submit</button>
 
             </form>
         </div>
