--- a/views/userprofile.ejs
+++ b/views/userprofile.ejs
@@ -39,7 +39,7 @@
             </div>
 
             <div class="form-floating mb-4">
-                <input name="worker_id" placeholder="Username" type="text" id="form6Example2" class="form-control" />
+                <input name="username" placeholder="Username" type="text" id="form6Example2" class="form-control" />
                 <label class="form-label" for="form6Example2">Username</label>
             </div>
 
