links added& button size solved

--- a/views/all_works.ejs
+++ b/views/all_works.ejs
@@ -62,7 +62,7 @@
                         Rs. 500/-
                     </h4>
                 </div>
-                <a href="#">
+                <a href="/worker_submit_form">
                     <button type="submit" class="apply_btn">
                         Apply Now
                     </button>
@@ -83,7 +83,7 @@
                         Rs. 500/-
                     </h4>
                 </div>
-                <a href="#">
+                <a href="/worker_submit_form">
                     <button type="submit" class="apply_btn">
                         Apply Now
                     </button>
@@ -105,7 +105,7 @@
                         Rs. 500/-
                     </h4>
                 </div>
-                <a href="#">
+                <a href="/worker_submit_form">
                     <button type="submit" class="apply_btn">
                         Apply Now
                     </button>
@@ -127,7 +127,7 @@
                         Rs. 500/-
                     </h4>
                 </div>
-                <a href="#">
+                <a href="/worker_submit_form">
                     <button type="submit" class="apply_btn">
                         Apply Now
                     </button>
@@ -149,7 +149,7 @@
                         Rs. 500/-
                     </h4>
                 </div>
-                <a href="#">
+                <a href="/worker_submit_form">
                     <button type="submit" class="apply_btn">
                         Apply Now
                     </button>
@@ -171,7 +171,7 @@
                         Rs. 500/-
                     </h4>
                 </div>
-                <a href="#">
+                <a href="/worker_submit_form">
                     <button type="submit" class="apply_btn">
                         Apply Now
                     </button>
@@ -193,7 +193,7 @@
                         Rs. 500/-
                     </h4>
                 </div>
-                <a href="#">
+                <a href="/worker_submit_form">
                     <button type="submit" class="apply_btn">
                         Apply Now
                     </button>
@@ -215,7 +215,7 @@
                         Rs. 500/-
                     </h4>
                 </div>
-                <a href="#">
+                <a href="/worker_submit_form">
                     <button type="submit" class="apply_btn">
                         Apply Now
                     </button>
