--- a/views/worker_index.ejs
+++ b/views/worker_index.ejs
@@ -64,7 +64,7 @@
                         Rs. 500/-
                     </h4>
                 </div>
-                <a href="#">
+                <a href="/worker_submit_form">
                     <button type="submit" class="apply_btn">
                         Apply Now
                     </button>
@@ -85,7 +85,7 @@
                         Rs. 500/-
                     </h4>
                 </div>
-                <a href="#">
+                <a href="/worker_submit_form">
                     <button type="submit" class="apply_btn">
                         Apply Now
                     </button>
@@ -129,7 +129,7 @@
                         Rs. 500/-
                     </h4>
                 </div>
-                <a href="#">
+                <a href="/worker_submit_form">
                     <button type="submit" class="apply_btn">
                         Apply Now
                     </button>
@@ -151,7 +151,7 @@
                         Rs. 500/-
                     </h4>
                 </div>
-                <a href="#">
+                <a href="/worker_submit_form">
                     <button type="submit" class="apply_btn">
                         Apply Now
                     </button>
@@ -173,7 +173,7 @@
                         Rs. 500/-
                     </h4>
                 </div>
-                <a href="#">
+                <a href="/worker_submit_form">
                     <button type="submit" class="apply_btn">
                         Apply Now
                     </button>
@@ -195,7 +195,7 @@
                         Rs. 500/-
                     </h4>
                 </div>
-                <a href="#">
+                <a href="/worker_submit_form">
                     <button type="submit" class="apply_btn">
                         Apply Now
                     </button>
@@ -217,7 +217,7 @@
                         Rs. 500/-
                     </h4>
                 </div>
-                <a href="#">
+                <a href="/worker_submit_form">
                     <button type="submit" class="apply_btn">
                         Apply Now
                     </button>
