--- a/public/stylesheet/submit_form.css
+++ b/public/stylesheet/submit_form.css
@@ -49,7 +49,7 @@
     background: #eee;
 }
 
-.temp{
+/* .temp{
     margin-top: 30px;
     width: 100%;
     border-radius: 10px;
@@ -58,7 +58,7 @@
     margin-top: 30px;
     width: 100%;
     border-radius: 10px;
-}
+} */
 
 #box #form{
     margin: 20px 0;
