add some functions

--- a/views/registerWorker.ejs
+++ b/views/registerWorker.ejs
@@ -48,7 +48,7 @@
               class="form-control"
               placeholder="Enter latitude"
               value="<%= typeof latitude != 'undefined' ? latitude : '' %>"
-            />
+              />
           </div>
           <div class="form-group">
             <label for="experience">Enter years of Experience</label>
@@ -102,3 +102,4 @@
       </div>
     </div>
   </div>
+  <input type="text" name="client_id" value=<%= data %>>
