--- a/views/all_works.ejs
+++ b/views/all_works.ejs
@@ -20,7 +20,7 @@
             <a href="/client/userprofile"><i class="bi bi-person-circle h2" style="color: white;"></i></a> -->
           <ul class="navbar-nav ms-auto align-center">
             <li class="nav-item mx-3" style="display: flex; align-items: center; font-size: 1.5rem;">
-              <a href="/worker" class="nav-link">Recommended</a>
+              <a href="/worker" class="nav-link">Recommended work</a>
       
             </li>
             <li class="nav-item mx-3" style="display: flex; align-items: center; font-size: 1.5rem;">
